[gd_scene load_steps=25 format=3 uid="uid://cjdpo2qo6jcen"]

[ext_resource type="Script" uid="uid://kdxn5brsro0d" path="res://Scripts/main_menu.gd" id="1_towmw"]
[ext_resource type="Texture2D" uid="uid://dbnqyj0tbpt3b" path="res://Assets/fishertalebackground.png" id="2_geflf"]
[ext_resource type="PackedScene" uid="uid://w055g11ybujx" path="res://scenes/particles/ambient_particlesMenu.tscn" id="2_ohdsy"]
[ext_resource type="FontFile" uid="uid://cxis0d8o6i83q" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="2_towmw"]
[ext_resource type="FontFile" uid="uid://cao7skrrs3un5" path="res://Assets/fonts/Urban Shadow Sans Serif.otf" id="4_geflf"]
[ext_resource type="FontFile" uid="uid://dgneouuso8jd1" path="res://Assets/fonts/PixelOperator8.ttf" id="4_pwqr4"]
[ext_resource type="AudioStream" uid="uid://ch8atmhcgq6on" path="res://Assets/sounds/uiHoveron.ogg" id="5_fkd6t"]
[ext_resource type="AudioStream" uid="uid://cfuurh6fhfc7" path="res://Assets/sounds/uiHoveroff.ogg" id="6_keln3"]
[ext_resource type="AudioStream" uid="uid://dc6du6htd3uph" path="res://Assets/sounds/uiSelect.ogg" id="7_crctu"]
[ext_resource type="AudioStream" uid="uid://dmgcwog7fvuqt" path="res://Assets/music/calm1padsfirst.ogg" id="8_cn35j"]
[ext_resource type="AudioStream" uid="uid://blfrq3hhhum1o" path="res://Assets/sounds/whirlpoolSpawn.ogg" id="8_wko7x"]
[ext_resource type="AudioStream" uid="uid://orim1bslsd8j" path="res://Assets/music/calm1padsloop.ogg" id="9_cn35j"]

[sub_resource type="LabelSettings" id="LabelSettings_cbtn6"]
font = ExtResource("2_towmw")
font_size = 600
font_color = Color(0.31, 0.5400001, 1, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(45.365, 76.825)

[sub_resource type="LabelSettings" id="LabelSettings_geflf"]
font = ExtResource("2_towmw")
font_size = 400
font_color = Color(0.31, 0.5400001, 1, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(45.365, 76.825)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_crctu"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_sn5u3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_crctu"]
resource_name = "fade away"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_cn35j"]
resource_name = "fadein"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cn35j"]
_data = {
&"RESET": SubResource("Animation_sn5u3"),
&"fade away": SubResource("Animation_crctu"),
&"fadein": SubResource("Animation_cn35j")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lars7"]
texture = ExtResource("2_geflf")
modulate_color = Color(0.46, 0.46, 0.46, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_12l0x"]
bg_color = Color(0.50430816, 0.6980982, 0.8339052, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p348b"]
bg_color = Color(0.12599999, 0.31500003, 0.45, 1)
border_width_left = 25
border_width_top = 25
border_width_right = 25
border_width_bottom = 25
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_13qgu"]
bg_color = Color(0.5058824, 0.69803923, 0.8352941, 1)
border_width_left = 25
border_width_top = 25
border_width_right = 25
border_width_bottom = 25
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_13qgu"]

[node name="Main menu" type="Control"]
layout_mode = 3
anchor_right = 1.764
anchor_bottom = 1.8230001
offset_top = 4.0
offset_right = -306.12805
offset_bottom = -141.30408
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.61289495, 0.61289495)
size_flags_horizontal = 0
script = ExtResource("1_towmw")

[node name="Ambient Particles Menu" parent="." instance=ExtResource("2_ohdsy")]
position = Vector2(1008.3294, 1150.2787)

[node name="fishertale" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -615.31226
offset_top = -364.99347
offset_right = 5009.6885
offset_bottom = 235.00653
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.23107316, 0.23593824)
theme_override_font_sizes/font_size = 381
text = "Fishertale"
label_settings = SubResource("LabelSettings_cbtn6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="battleforsea" type="Label" parent="fishertale"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2215.9966
offset_top = 400.0
offset_right = 4084.0037
offset_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.68435466, 0.68435466)
theme_override_font_sizes/font_size = 381
text = "Battle for the sea"
label_settings = SubResource("LabelSettings_geflf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="."]
z_index = 210
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -91.36965
offset_top = -57.106037
offset_right = 228.65796
offset_bottom = 86.54138
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_crctu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel"]
libraries = {
&"": SubResource("AnimationLibrary_cn35j")
}

[node name="Background" type="Panel" parent="."]
z_index = -50
layout_mode = 1
anchors_preset = -1
anchor_right = 1.092
anchor_bottom = 1.016
offset_left = -79.94844
offset_top = -115.84367
offset_right = -238.74048
offset_bottom = -132.41968
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.0997503, 1.1024427)
theme_override_styles/panel = SubResource("StyleBoxTexture_lars7")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.04193
offset_top = -10.936035
offset_right = 588.8095
offset_bottom = 56.064087
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.85478735, 0.85478735)
theme_override_fonts/font = ExtResource("4_pwqr4")
theme_override_font_sizes/font_size = 31
text = "Skip Tutorial"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.07
anchor_bottom = 1.0
offset_left = 853.32745
offset_top = 618.74066
offset_right = 340.0039
offset_bottom = 1083.3395
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.21233284, 0.21233284)
theme_override_constants/separation = 539

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.00978053, 0.12789613, 0.22829098, 1)
theme_override_colors/font_focus_color = Color(0.007843138, 0.12941177, 0.22745098, 1)
theme_override_colors/font_pressed_color = Color(0.40432662, 0.70529413, 0.9734008, 1)
theme_override_colors/font_hover_color = Color(0.031769015, 0.2745285, 0.4496572, 1)
theme_override_colors/font_hover_pressed_color = Color(0.007843138, 0.12941177, 0.22745098, 1)
theme_override_colors/font_disabled_color = Color(0.007843138, 0.12941177, 0.22745098, 1)
theme_override_colors/font_outline_color = Color(0.007843138, 0.12941177, 0.22745098, 1)
theme_override_fonts/font = ExtResource("4_geflf")
theme_override_font_sizes/font_size = 300
theme_override_styles/normal = SubResource("StyleBoxFlat_12l0x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p348b")
theme_override_styles/hover = SubResource("StyleBoxFlat_13qgu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_13qgu")
text = "Start Game"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.00978053, 0.12789613, 0.22829098, 1)
theme_override_colors/font_focus_color = Color(0.007843138, 0.12941177, 0.22745098, 1)
theme_override_colors/font_pressed_color = Color(0.40432662, 0.70529413, 0.9734008, 1)
theme_override_colors/font_hover_color = Color(0.031769015, 0.2745285, 0.4496572, 1)
theme_override_colors/font_hover_pressed_color = Color(0.007843138, 0.12941177, 0.22745098, 1)
theme_override_colors/font_disabled_color = Color(0.007843138, 0.12941177, 0.22745098, 1)
theme_override_colors/font_outline_color = Color(0.007843138, 0.12941177, 0.22745098, 1)
theme_override_fonts/font = ExtResource("4_geflf")
theme_override_font_sizes/font_size = 300
theme_override_styles/normal = SubResource("StyleBoxFlat_12l0x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p348b")
theme_override_styles/hover = SubResource("StyleBoxFlat_13qgu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_13qgu")
text = "Exit"

[node name="sounds" type="Node" parent="."]

[node name="ui" type="Node" parent="sounds"]

[node name="hoveron" type="AudioStreamPlayer" parent="sounds/ui"]
stream = ExtResource("5_fkd6t")

[node name="hoveroff" type="AudioStreamPlayer" parent="sounds/ui"]
stream = ExtResource("6_keln3")

[node name="select" type="AudioStreamPlayer" parent="sounds/ui"]
stream = ExtResource("7_crctu")

[node name="foosh" type="AudioStreamPlayer" parent="sounds/ui"]
stream = ExtResource("8_wko7x")

[node name="menumusic" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("8_cn35j")

[node name="menumusicloop" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource("9_cn35j")

[connection signal="mouse_entered" from="VBoxContainer/Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="onStartPressed"]
[connection signal="mouse_entered" from="VBoxContainer/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="onExitPressed"]
[connection signal="finished" from="sounds/menumusic" to="." method="_on_menumusic_finished"]
